--- a/build.xml
+++ b/build.xml
@@ -205,7 +205,9 @@
     <mkdir dir="${rootdir}/build/jar"/>
     <jar destfile="${rootdir}/build/jar/near-apl.jar" basedir="${rootdir}/build/classes">
 
-   	  <fileset dir="${rootdir}/build/misc/**"/>
+   	  <fileset dir="${rootdir}/build">
+    	<include name="misc"/>
+      </fileset>
       <fileset dir="${rootdir}/build/classes">
         <exclude name="edu/jhuapl/sbmt/data/LinearFeatures.txt"/>
         <exclude name="edu/jhuapl/sbmt/tools/**"/>
