--- a/src/Makefile
+++ b/src/Makefile
@@ -95,8 +95,7 @@ all_java_files := ${SBMTROOT}/src/edu/jhuapl/sbmt/*/*.java
 
 ${most_supported_targets} :
 
-#all : ${NEARJAR} ${NEARAPLJAR}
-all : ${NEARJAR}
+all : ${NEARJAR} ${NEARAPLJAR}
 
 install : ${NEARAPLJAR} tools
 		@echo $@: "Installing near-apl.jar to ${LIBROOT} as near.jar" 
