--- a/build.xml
+++ b/build.xml
@@ -53,6 +53,7 @@
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/guava-13.0.1.jar"/>
+      	<pathelement location="${libDir}/guava-mini-0.1.jar"/>
         <pathelement location="${libDir}/glum-1.1.1.jar"/>
         <pathelement location="${libDir}/Jama-1.0.2.jar"/>
         <pathelement location="${libDir}/jcommon-1.0.16.jar"/>
@@ -176,6 +177,7 @@
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/guava-13.0.1.jar"/>
+      	<pathelement location="${libDir}/guava-mini-0.1.jar"/>
         <pathelement location="${libDir}/glum-1.1.1.jar"/>
         <pathelement location="${libDir}/Jama-1.0.2.jar"/>
         <pathelement location="${libDir}/jcommon-1.0.16.jar"/>
@@ -226,6 +228,7 @@
             gson-2.8.0.jar
             nom-tam-fits-1.13.1m0.jar
             guava-13.0.1.jar
+        	guava-mini-0.1.jar
             glum-1.1.1.jar
             Jama-1.0.2.jar
             jcommon-1.0.16.jar
@@ -247,7 +250,6 @@
 	    jogl-all-natives-macosx-universal.jar
             saavtk.jar
         	altwg.jar
-            altwg-java-tools.jar
         	jcommander-1.72.jar
             jide-oss-3.6.9.jar
             mysql-connector-java-5.1.10-bin.jar
@@ -343,6 +345,7 @@
         	gson-2.8.0.jar
             nom-tam-fits-1.13.1m0.jar
             guava-13.0.1.jar
+        	guava-mini-0.1.jar
             glum-1.1.1.jar
             Jama-1.0.2.jar
             jcommon-1.0.16.jar
@@ -364,7 +367,6 @@
 	    jogl-all-natives-macosx-universal.jar
             saavtk.jar
         	altwg.jar
-            altwg-java-tools.jar
         	jcommander-1.72.jar
             jide-oss-3.6.9.jar
             mysql-connector-java-5.1.10-bin.jar
@@ -446,6 +448,7 @@
                                             gson-2.8.0.jar
                                             nom-tam-fits-1.13.1m0.jar
                                             guava-13.0.1.jar
+											guava-mini-0.1.jar
                                             glum-1.1.1.jar
                                             Jama-1.0.2.jar
                                             jcommon-1.0.16.jar
@@ -579,6 +582,7 @@
     <delete file="${rootlibDir}/gson-2.8.0.jar"/>
     <delete file="${rootlibDir}/nom-tam-fits-1.13.1m0.jar"/>
     <delete file="${rootlibDir}/guava-13.0.1.jar"/>
+  	<delete file="${rootlibDir}/guava-mini-0.1.jar"/>
     <delete file="${rootlibDir}/glum-1.1.1.jar"/>
     <delete file="${rootlibDir}/Jama-1.0.2.jar"/>
     <delete file="${rootlibDir}/jcommon-1.0.16.jar"/>
@@ -645,6 +649,7 @@
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/guava-13.0.1.jar"/>
+      	<pathelement location="${libDir}/guava-mini-0.1.jar"/>
         <pathelement location="${libDir}/glum-1.1.1.jar"/>
         <pathelement location="${libDir}/Jama-1.0.2.jar"/>
         <pathelement location="${libDir}/jcommon-1.0.16.jar"/>
