--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,7 @@
 	<classpathentry kind="lib" path="lib/drmaa.jar"/>
 	<classpathentry kind="lib" path="lib/altwg.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="lib/jcodec-0.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/jcodec-javase-0.2.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
