--- a/build.xml
+++ b/build.xml
@@ -50,6 +50,7 @@
       	<pathelement location="${libDir}/crucible-settings-4.0.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
+      	<pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/guava-13.0.1.jar"/>
@@ -174,6 +175,7 @@
       	<pathelement location="${libDir}/crucible-settings-4.0.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
+      	<pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/guava-13.0.1.jar"/>
@@ -225,6 +227,7 @@
         	crucible-metadata-4.3.jar
         	crucible-settings-4.0.jar
             commons-math3-3.2.jar
+          	commons-text-1.8.jar
             gson-2.8.0.jar
             nom-tam-fits-1.13.1m0.jar
             guava-13.0.1.jar
@@ -342,6 +345,7 @@
         	crucible-settings-4.0.jar
         	crucible-metadata-4.3.jar
             commons-math3-3.2.jar
+          	commons-text-1.8.jar
         	gson-2.8.0.jar
             nom-tam-fits-1.13.1m0.jar
             guava-13.0.1.jar
@@ -445,6 +449,7 @@
         									crucible-settings-4.0.jar
         									crucible-metadata-4.3.jar
                                             commons-math3-3.2.jar
+                                            commons-text-1.8.jar
                                             gson-2.8.0.jar
                                             nom-tam-fits-1.13.1m0.jar
                                             guava-13.0.1.jar
@@ -579,6 +584,7 @@
    	<delete file="${rootlibDir}/crucible-metadata-4.3.jar"/>
     <delete file="${rootlibDir}/commons-io-2.0.jar"/>
     <delete file="${rootlibDir}/commons-math3-3.2.jar"/>
+  	<delete file="${rootlibDir}/commons-text-1.8.jar"/>
     <delete file="${rootlibDir}/gson-2.8.0.jar"/>
     <delete file="${rootlibDir}/nom-tam-fits-1.13.1m0.jar"/>
     <delete file="${rootlibDir}/guava-13.0.1.jar"/>
@@ -621,6 +627,7 @@
 <!--
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
+        <pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/guava-13.0.1.jar"/>
@@ -646,6 +653,7 @@
       	<pathelement location="${libDir}/crucible-metadata-4.3.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
+        <pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/guava-13.0.1.jar"/>
