--- a/build.xml
+++ b/build.xml
@@ -631,6 +631,7 @@
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/guava-13.0.1.jar"/>
+        <pathelement location="${libDir}/glum-1.2.jar"/>
         <pathelement location="${libDir}/Jama-1.0.2.jar"/>
         <pathelement location="${libDir}/jcommon-1.0.16.jar"/>
         <pathelement location="${libDir}/jfreechart-1.0.13.jar"/>
