--- a/build.xml
+++ b/build.xml
@@ -171,6 +171,7 @@
         <fileset dir="${rootdir}/lib">
           <include name="**/*.jar" />
         </fileset>
+        <pathelement location="${rootdir}/lib/commons-math3-3.6.1.jar"/>
       	<pathelement location="${libDir}/crucible-metadata-4.3.jar"/>
       	<pathelement location="${libDir}/crucible-settings-4.0.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
