added dart server build to makefile

--- a/misc/server/sbmt/Makefile
+++ b/misc/server/sbmt/Makefile
@@ -1,3 +1,3 @@
 # This Makefile executes 'make' in the subdirectories indicated 'SUBDIRS'
-SUBDIRS := internal public hayabusa2 orex nh
+SUBDIRS := internal public hayabusa2 orex nh dart
 include ${SBMTROOT}/config/Makefiles/Master
