RM 2097: replace guava 13.0 with saavtk/guava 28.2. DOES NOT COMPILE.
Class Ranges is missing. Class Stopwatch's constructor is
no longer public.

--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry excluding="edu/jhuapl/sbmt/gui/time/StateHistoryPopupMenu.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="lib" path="/saavtk/lib/guava-28.2.jar" sourcepath="/saavtk/lib/guava-28.2-src.zip"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.10-bin.jar"/>
 	<classpathentry kind="lib" path="lib/spice-N0065.jar"/>
 	<classpathentry kind="lib" path="lib/jide-oss-3.6.9.jar"/>
