--- a/build.xml
+++ b/build.xml
@@ -46,6 +46,8 @@
            destdir="${rootSAAVTKdir}/build/classes"
            debug="off" >
       <classpath>
+      	<pathelement location="${libDir}/crucible-core-20200408.jar"/>
+      	<pathelement location="${libDir}/crucible-mantle-spice-20200408.jar"/>
       	<pathelement location="${libDir}/crucible-metadata-4.3.jar"/>
       	<pathelement location="${libDir}/crucible-settings-4.0.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
@@ -54,6 +56,8 @@
       	<pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
+        <pathelement location="${libDir}/jafama-2.3.1.jar"/>
+        <pathelement location="${libDir}/jsr305.jar"/>
         <pathelement location="${libDir}/guava-28.2.jar"/>
       	<pathelement location="${libDir}/guava-mini-0.1.jar"/>
         <pathelement location="${libDir}/glum-1.2.2.jar"/>
@@ -173,6 +177,8 @@
           <include name="*.jar" />
         </fileset>
         <pathelement location="${libDir}/commons-math3-3.6.1.jar"/>
+      	<pathelement location="${libDir}/crucible-core-20200408.jar"/>
+      	<pathelement location="${libDir}/crucible-mantle-spice-20200408.jar"/>
       	<pathelement location="${libDir}/crucible-metadata-4.3.jar"/>
       	<pathelement location="${libDir}/crucible-settings-4.0.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
@@ -180,6 +186,8 @@
       	<pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
+        <pathelement location="${libDir}/jafama-2.3.1.jar"/>
+        <pathelement location="${libDir}/jsr305.jar"/>
         <pathelement location="${libDir}/guava-28.2.jar"/>
       	<pathelement location="${libDir}/guava-mini-0.1.jar"/>
         <pathelement location="${libDir}/glum-1.2.2.jar"/>
@@ -226,6 +234,8 @@
       <manifest>
         <attribute name="Class-Path" value="netcdfAll-4.3.jar
         	commons-io-2.0.jar
+          	crucible-core-20200408.jar
+          	crucible-mantle-spice-20200408.jar
         	crucible-metadata-4.3.jar
         	crucible-settings-4.0.jar
         	commons-math3-3.6.1.jar
@@ -233,6 +243,8 @@
           	commons-text-1.8.jar
             gson-2.8.0.jar
             nom-tam-fits-1.13.1m0.jar
+        	jafama-2.3.1.jar
+        	jsr305.jar
             guava-28.2.jar
         	guava-mini-0.1.jar
             glum-1.2.2.jar
@@ -345,6 +357,8 @@
       <manifest>
         <attribute name="Class-Path" value="netcdfAll-4.3.jar
         	commons-io-2.0.jar
+          	crucible-core-20200408.jar
+          	crucible-mantle-spice-20200408.jar
         	crucible-settings-4.0.jar
         	crucible-metadata-4.3.jar
             commons-math3-3.6.1.jar
@@ -352,6 +366,8 @@
           	commons-text-1.8.jar
         	gson-2.8.0.jar
             nom-tam-fits-1.13.1m0.jar
+        	jafama-2.3.1.jar
+        	jsr305.jar
             guava-28.2.jar
         	guava-mini-0.1.jar
             glum-1.2.2.jar
@@ -450,13 +466,17 @@
     <jar destfile="${rootSAAVTKdir}/build/jar/saavtk.jar" basedir="${rootSAAVTKdir}/build/classes">
       <manifest>
         <attribute name="Class-Path" value="commons-io-2.0.jar
-        									crucible-settings-4.0.jar
+          									crucible-core-20200408.jar
+         								 	crucible-mantle-spice-20200408.jar
+       										crucible-settings-4.0.jar
         									crucible-metadata-4.3.jar
         									commons-math3-3.6.1.jar
                                             commons-math3-3.2.jar
                                             commons-text-1.8.jar
                                             gson-2.8.0.jar
                                             nom-tam-fits-1.13.1m0.jar
+        									jafama-2.3.1.jar
+        									jsr305.jar
                                             guava-28.2.jar
 											guava-mini-0.1.jar
                                             glum-1.2.2.jar
@@ -585,6 +605,8 @@
   <target name="clean">
     <delete dir="${rootdir}/build"/>
     <delete dir="${rootSAAVTKdir}/build"/>
+  	<delete file="${rootlibDir}/crucible-core-20200408.jar"/>
+  	<delete file="${rootlibDir}/crucible-mantle-spice-20200408.jar"/>
   	<delete file="${rootlibDir}/crucible-settings-4.0.jar"/>
    	<delete file="${rootlibDir}/crucible-metadata-4.3.jar"/>
     <delete file="${rootlibDir}/commons-io-2.0.jar"/>
@@ -593,6 +615,8 @@
   	<delete file="${rootlibDir}/commons-text-1.8.jar"/>
     <delete file="${rootlibDir}/gson-2.8.0.jar"/>
     <delete file="${rootlibDir}/nom-tam-fits-1.13.1m0.jar"/>
+    <delete file="${rootlibDir}/jafama-2.3.1.jar"/>
+    <delete file="${rootlibDir}/jsr305.jar"/>
     <delete file="${rootlibDir}/guava-28.2.jar"/>
   	<delete file="${rootlibDir}/guava-mini-0.1.jar"/>
     <delete file="${rootlibDir}/glum-1.2.2.jar"/>
@@ -636,6 +660,8 @@
         <pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
+        <pathelement location="${libDir}/jafama-2.3.1.jar"/>
+        <pathelement location="${libDir}/jsr305.jar"/>
         <pathelement location="${libDir}/guava-28.2.jar"/>
         <pathelement location="${libDir}/glum-1.2.2.jar"/>
         <pathelement location="${libDir}/Jama-1.0.2.jar"/>
@@ -656,6 +682,8 @@
         <pathelement location="${rootdir}/build/jar/near.jar"/>
         <pathelement location="${rootSAAVTKdir}/build/jar/saavtk.jar"/>
 -->
+      	<pathelement location="${libDir}/crucible-core-20200408.jar"/>
+      	<pathelement location="${libDir}/crucible-mantle-spice-20200408.jar"/>
       	<pathelement location="${libDir}/crucible-settings-4.0.jar"/>
       	<pathelement location="${libDir}/crucible-metadata-4.3.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
@@ -664,6 +692,8 @@
         <pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
+        <pathelement location="${libDir}/jafama-2.3.1.jar"/>
+        <pathelement location="${libDir}/jsr305.jar"/>
         <pathelement location="${libDir}/guava-28.2.jar"/>
       	<pathelement location="${libDir}/guava-mini-0.1.jar"/>
         <pathelement location="${libDir}/glum-1.2.2.jar"/>
