--- a/.classpath
+++ b/.classpath
@@ -21,9 +21,10 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="/saavtk/lib/jafama-2.3.1.jar"/>
 	<classpathentry kind="lib" path="/saavtk/lib/jsr305.jar"/>
-	<classpathentry kind="lib" path="/saavtk/lib/crucible-core-20200408.jar" sourcepath="/saavtk/lib/crucible-core-src-20200408.zip"/>
-	<classpathentry kind="lib" path="/saavtk/lib/crucible-mantle-spice-20200408.jar" sourcepath="/saavtk/lib/crucible-mantle-spice-src-20200408.zip"/>
-	<classpathentry kind="lib" path="/saavtk/lib/crucible-metadata-4.4.1.jar"/>
-	<classpathentry kind="lib" path="/saavtk/lib/crucible-settings-4.1.jar"/>
+	<classpathentry kind="lib" path="/saavtk/lib/crucible-core-20200730.jar"/>
+	<classpathentry kind="lib" path="/saavtk/lib/crucible-mantle-spice-20200730.jar"/>
+	<classpathentry kind="lib" path="/saavtk/lib/crucible-crust-metadata-20200730.jar"/>
+	<classpathentry kind="lib" path="/saavtk/lib/crucible-crust-settings-20200730.jar"/>
+	<classpathentry kind="lib" path="/saavtk/lib/crucible-crust-spice-20200730.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
