RM 2094: update build to include latest crucible.

--- a/build.xml
+++ b/build.xml
@@ -46,10 +46,11 @@
            destdir="${rootSAAVTKdir}/build/classes"
            debug="off" >
       <classpath>
-      	<pathelement location="${libDir}/crucible-core-20200408.jar"/>
-      	<pathelement location="${libDir}/crucible-mantle-spice-20200408.jar"/>
-      	<pathelement location="${libDir}/crucible-metadata-4.4.1.jar"/>
-      	<pathelement location="${libDir}/crucible-settings-4.1.jar"/>
+      	<pathelement location="${libDir}/crucible-core-20200730.jar"/>
+      	<pathelement location="${libDir}/crucible-mantle-spice-20200730.jar"/>
+      	<pathelement location="${libDir}/crucible-crust-metadata-20200730.jar"/>
+      	<pathelement location="${libDir}/crucible-crust-settings-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-crust-spice-20200730.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
         <pathelement location="${libDir}/commons-math3-3.6.1.jar"/>
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
@@ -176,13 +177,12 @@
         <fileset dir="${rootdir}/lib">
           <include name="*.jar" />
         </fileset>
-      	<pathelement location="${libDir}/crucible-core-20200408.jar"/>
-      	<pathelement location="${libDir}/crucible-mantle-spice-20200408.jar"/>
+        <pathelement location="${libDir}/crucible-core-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-mantle-spice-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-crust-metadata-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-crust-settings-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-crust-spice-20200730.jar"/>
         <pathelement location="${libDir}/commons-math3-3.6.1.jar"/>
-      	<pathelement location="${libDir}/crucible-core-20200408.jar"/>
-      	<pathelement location="${libDir}/crucible-mantle-spice-20200408.jar"/>
-      	<pathelement location="${libDir}/crucible-metadata-4.4.1.jar"/>
-      	<pathelement location="${libDir}/crucible-settings-4.1.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
       	<pathelement location="${libDir}/commons-text-1.8.jar"/>
@@ -236,10 +236,11 @@
       <manifest>
         <attribute name="Class-Path" value="netcdfAll-4.3.jar
         	commons-io-2.0.jar
-          	crucible-core-20200408.jar
-          	crucible-mantle-spice-20200408.jar
-        	crucible-metadata-4.4.1.jar
-        	crucible-settings-4.1.jar
+            crucible-core-20200730.jar
+            crucible-mantle-spice-20200730.jar
+            crucible-crust-metadata-20200730.jar
+            crucible-crust-settings-20200730.jar
+            crucible-crust-spice-20200730.jar
         	commons-math3-3.6.1.jar
             commons-math3-3.2.jar
           	commons-text-1.8.jar
@@ -358,11 +359,12 @@
 
       <manifest>
         <attribute name="Class-Path" value="netcdfAll-4.3.jar
-        	commons-io-2.0.jar
-          	crucible-core-20200408.jar
-          	crucible-mantle-spice-20200408.jar
-        	crucible-settings-4.1.jar
-        	crucible-metadata-4.4.1.jar
+            crucible-core-20200730.jar
+            crucible-mantle-spice-20200730.jar
+            crucible-crust-metadata-20200730.jar
+            crucible-crust-settings-20200730.jar
+            crucible-crust-spice-20200730.jar
+        	  commons-io-2.0.jar
             commons-math3-3.6.1.jar
             commons-math3-3.2.jar
           	commons-text-1.8.jar
@@ -467,11 +469,11 @@
     <mkdir dir="${rootSAAVTKdir}/build/jar"/>
     <jar destfile="${rootSAAVTKdir}/build/jar/saavtk.jar" basedir="${rootSAAVTKdir}/build/classes">
       <manifest>
-        <attribute name="Class-Path" value="commons-io-2.0.jar
-          									crucible-core-20200408.jar
-         								 	crucible-mantle-spice-20200408.jar
-        									crucible-settings-4.1.jar
-        									crucible-metadata-4.4.1.jar
+        <attribute name="Class-Path" value="crucible-core-20200730.jar
+        									crucible-mantle-spice-20200730.jar
+        									crucible-crust-metadata-20200730.jar
+        									crucible-crust-settings-20200730.jar
+        									crucible-crust-spice-20200730.jar
         									commons-math3-3.6.1.jar
                                             commons-math3-3.2.jar
                                             commons-text-1.8.jar
@@ -607,10 +609,11 @@
   <target name="clean">
     <delete dir="${rootdir}/build"/>
     <delete dir="${rootSAAVTKdir}/build"/>
-  	<delete file="${rootlibDir}/crucible-core-20200408.jar"/>
-  	<delete file="${rootlibDir}/crucible-mantle-spice-20200408.jar"/>
-  	<delete file="${rootlibDir}/crucible-settings-4.1.jar"/>
-   	<delete file="${rootlibDir}/crucible-metadata-4.4.1.jar"/>
+  	<delete file="${rootlibDir}/crucible-core-20200730.jar"/>
+  	<delete file="${rootlibDir}/crucible-mantle-spice-20200730.jar"/>
+  	<delete file="${rootlibDir}/crucible-crust-settings-20200730.jar"/>
+   	<delete file="${rootlibDir}/crucible-crust-metadata-20200730.jar"/>
+    <delete file="${rootlibDir}/crucible-crust-spice-20200730.jar"/>
     <delete file="${rootlibDir}/commons-io-2.0.jar"/>
     <delete file="${rootlibDir}/commons-math3-3.6.1.jar"/>
     <delete file="${rootlibDir}/commons-math3-3.2.jar"/>
@@ -657,10 +660,11 @@
       <jvmarg value="-Dcom.apple.mrj.application.apple.menu.about.name=SBMT Test"/>
       <classpath>
 <!--
-        <pathelement location="${libDir}/crucible-core-20200408.jar"/>
-        <pathelement location="${libDir}/crucible-mantle-spice-20200408.jar"/>
-        <pathelement location="${libDir}/crucible-settings-4.1.jar"/>
-        <pathelement location="${libDir}/crucible-metadata-4.4.1.jar"/>
+        <pathelement location="${libDir}/crucible-core-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-mantle-spice-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-crust-metadata-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-crust-settings-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-crust-spice-20200730.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
         <pathelement location="${libDir}/commons-text-1.8.jar"/>
@@ -688,10 +692,11 @@
         <pathelement location="${rootdir}/build/jar/near.jar"/>
         <pathelement location="${rootSAAVTKdir}/build/jar/saavtk.jar"/>
 -->
-      	<pathelement location="${libDir}/crucible-core-20200408.jar"/>
-      	<pathelement location="${libDir}/crucible-mantle-spice-20200408.jar"/>
-      	<pathelement location="${libDir}/crucible-settings-4.1.jar"/>
-      	<pathelement location="${libDir}/crucible-metadata-4.4.1.jar"/>
+        <pathelement location="${libDir}/crucible-core-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-mantle-spice-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-crust-metadata-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-crust-settings-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-crust-spice-20200730.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
         <pathelement location="${libDir}/commons-math3-3.6.1.jar"/>
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
