--- a/build.xml
+++ b/build.xml
@@ -57,7 +57,8 @@
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/guava-28.2.jar"/>
       	<pathelement location="${libDir}/guava-mini-0.1.jar"/>
-        <pathelement location="${libDir}/glum-1.3.4.jar"/>
+        <pathelement location="${libDir}/glum-1.3.5.jar"/>
+        <pathelement location="${libDir}/plotkit-2020.10.01.jar"/>
         <pathelement location="${libDir}/Jama-1.0.2.jar"/>
         <pathelement location="${libDir}/jcommon-1.0.16.jar"/>
         <pathelement location="${libDir}/jfreechart-1.0.13.jar"/>
@@ -185,7 +186,8 @@
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/guava-28.2.jar"/>
       	<pathelement location="${libDir}/guava-mini-0.1.jar"/>
-        <pathelement location="${libDir}/glum-1.3.4.jar"/>
+        <pathelement location="${libDir}/glum-1.3.5.jar"/>
+        <pathelement location="${libDir}/plotkit-2020.10.01.jar"/>
         <pathelement location="${libDir}/Jama-1.0.2.jar"/>
         <pathelement location="${libDir}/jcommon-1.0.16.jar"/>
         <pathelement location="${libDir}/jfreechart-1.0.13.jar"/>
@@ -240,7 +242,8 @@
             nom-tam-fits-1.13.1m0.jar
             guava-28.2.jar
         	guava-mini-0.1.jar
-            glum-1.3.4.jar
+            glum-1.3.5.jar
+            plotkit-2020.10.01.jar
             Jama-1.0.2.jar
             jcommon-1.0.16.jar
             jfreechart-1.0.13.jar
@@ -361,7 +364,8 @@
             nom-tam-fits-1.13.1m0.jar
             guava-28.2.jar
         	guava-mini-0.1.jar
-            glum-1.3.4.jar
+            glum-1.3.5.jar
+            plotkit-2020.10.01.jar
             Jama-1.0.2.jar
             jcommon-1.0.16.jar
             jfreechart-1.0.13.jar
@@ -468,7 +472,8 @@
                                             nom-tam-fits-1.13.1m0.jar
                                             guava-28.2.jar
 											guava-mini-0.1.jar
-                                            glum-1.3.4.jar
+                                            glum-1.3.5.jar
+                                            plotkit-2020.10.01.jar
                                             Jama-1.0.2.jar
                                             jcommon-1.0.16.jar
                                             jfreechart-1.0.13.jar
@@ -606,7 +611,8 @@
     <delete file="${rootlibDir}/nom-tam-fits-1.13.1m0.jar"/>
     <delete file="${rootlibDir}/guava-28.2.jar"/>
   	<delete file="${rootlibDir}/guava-mini-0.1.jar"/>
-    <delete file="${rootlibDir}/glum-1.3.4.jar"/>
+    <delete file="${rootlibDir}/glum-1.3.5.jar"/>
+    <delete file="${rootlibDir}/plotkit-2020.10.01.jar"/>
     <delete file="${rootlibDir}/Jama-1.0.2.jar"/>
     <delete file="${rootlibDir}/jcommon-1.0.16.jar"/>
     <delete file="${rootlibDir}/jfreechart-1.0.13.jar"/>
@@ -648,7 +654,8 @@
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/guava-28.2.jar"/>
-        <pathelement location="${libDir}/glum-1.3.4.jar"/>
+        <pathelement location="${libDir}/glum-1.3.5.jar"/>
+        <pathelement location="${libDir}/plotkit-2020.10.01.jar"/>
         <pathelement location="${libDir}/Jama-1.0.2.jar"/>
         <pathelement location="${libDir}/jcommon-1.0.16.jar"/>
         <pathelement location="${libDir}/jfreechart-1.0.13.jar"/>
@@ -679,7 +686,8 @@
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/guava-28.2.jar"/>
       	<pathelement location="${libDir}/guava-mini-0.1.jar"/>
-        <pathelement location="${libDir}/glum-1.3.4.jar"/>
+        <pathelement location="${libDir}/glum-1.3.5.jar"/>
+        <pathelement location="${libDir}/plotkit-2020.10.01.jar"/>
         <pathelement location="${libDir}/Jama-1.0.2.jar"/>
         <pathelement location="${libDir}/jcommon-1.0.16.jar"/>
         <pathelement location="${libDir}/jfreechart-1.0.13.jar"/>
