Updates to support setting of displayable item and FOV items in tables partial reorg of time management for state history

--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/jcodec-0.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/jcodec-javase-0.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/lombok.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
