--- a/build.xml
+++ b/build.xml
@@ -55,6 +55,7 @@
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
       	<pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
+        <pathelement location="${libDir}/jcodec-javase-0.2.3.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/jafama-2.3.1.jar"/>
         <pathelement location="${libDir}/jsr305.jar"/>
@@ -187,6 +188,7 @@
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
       	<pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
+        <pathelement location="${libDir}/jcodec-javase-0.2.3.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/jafama-2.3.1.jar"/>
         <pathelement location="${libDir}/jsr305.jar"/>
@@ -246,6 +248,7 @@
             commons-math3-3.2.jar
           	commons-text-1.8.jar
             gson-2.8.0.jar
+            jcodec-javase-0.2.3.jar
             nom-tam-fits-1.13.1m0.jar
         	jafama-2.3.1.jar
         	jsr305.jar
@@ -371,6 +374,7 @@
             commons-math3-3.2.jar
           	commons-text-1.8.jar
         	gson-2.8.0.jar
+        	jcodec-javase-0.2.3.jar
             nom-tam-fits-1.13.1m0.jar
         	jafama-2.3.1.jar
         	jsr305.jar
@@ -481,6 +485,7 @@
                                             commons-math3-3.2.jar
                                             commons-text-1.8.jar
                                             gson-2.8.0.jar
+                                            jcodec-javase-0.2.3.jar
                                             nom-tam-fits-1.13.1m0.jar
         									jafama-2.3.1.jar
         									jsr305.jar
@@ -623,6 +628,7 @@
     <delete file="${rootlibDir}/commons-math3-3.2.jar"/>
   	<delete file="${rootlibDir}/commons-text-1.8.jar"/>
     <delete file="${rootlibDir}/gson-2.8.0.jar"/>
+    <delete file="${libDir}/jcodec-javase-0.2.3.jar"/>
     <delete file="${rootlibDir}/nom-tam-fits-1.13.1m0.jar"/>
     <delete file="${rootlibDir}/jafama-2.3.1.jar"/>
     <delete file="${rootlibDir}/jsr305.jar"/>
@@ -674,6 +680,7 @@
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
         <pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
+        <pathelement location="${libDir}/jcodec-javase-0.2.3.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/jafama-2.3.1.jar"/>
         <pathelement location="${libDir}/jsr305.jar"/>
@@ -708,6 +715,7 @@
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
         <pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
+        <pathelement location="${libDir}/jcodec-javase-0.2.3.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/jafama-2.3.1.jar"/>
         <pathelement location="${libDir}/jsr305.jar"/>
