--- a/build.xml
+++ b/build.xml
@@ -55,6 +55,7 @@
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
       	<pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
+        <pathelement location="${libDir}/jcodec-0.2.3.jar"/>
         <pathelement location="${libDir}/jcodec-javase-0.2.3.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/jafama-2.3.1.jar"/>
@@ -188,6 +189,7 @@
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
       	<pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
+        <pathelement location="${libDir}/jcodec-0.2.3.jar"/>
         <pathelement location="${libDir}/jcodec-javase-0.2.3.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/jafama-2.3.1.jar"/>
@@ -248,6 +250,7 @@
             commons-math3-3.2.jar
           	commons-text-1.8.jar
             gson-2.8.0.jar
+            jcodec-0.2.3.jar
             jcodec-javase-0.2.3.jar
             nom-tam-fits-1.13.1m0.jar
         	jafama-2.3.1.jar
@@ -374,6 +377,7 @@
             commons-math3-3.2.jar
           	commons-text-1.8.jar
         	gson-2.8.0.jar
+        	jcodec-0.2.3.jar
         	jcodec-javase-0.2.3.jar
             nom-tam-fits-1.13.1m0.jar
         	jafama-2.3.1.jar
@@ -485,6 +489,7 @@
                                             commons-math3-3.2.jar
                                             commons-text-1.8.jar
                                             gson-2.8.0.jar
+                                            jcodec-0.2.3.jar
                                             jcodec-javase-0.2.3.jar
                                             nom-tam-fits-1.13.1m0.jar
         									jafama-2.3.1.jar
@@ -628,6 +633,7 @@
     <delete file="${rootlibDir}/commons-math3-3.2.jar"/>
   	<delete file="${rootlibDir}/commons-text-1.8.jar"/>
     <delete file="${rootlibDir}/gson-2.8.0.jar"/>
+    <delete file="${rootlibDir}/jcodec-0.2.3.jar"/>
     <delete file="${rootlibDir}/jcodec-javase-0.2.3.jar"/>
     <delete file="${rootlibDir}/nom-tam-fits-1.13.1m0.jar"/>
     <delete file="${rootlibDir}/jafama-2.3.1.jar"/>
@@ -681,6 +687,7 @@
         <pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
         <pathelement location="${libDir}/jcodec-javase-0.2.3.jar"/>
+        <pathelement location="${libDir}/jcodec-javase-0.2.3.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/jafama-2.3.1.jar"/>
         <pathelement location="${libDir}/jsr305.jar"/>
@@ -715,6 +722,7 @@
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
         <pathelement location="${libDir}/commons-text-1.8.jar"/>
         <pathelement location="${libDir}/gson-2.8.0.jar"/>
+        <pathelement location="${libDir}/jcodec-javase-0.2.3.jar"/>
         <pathelement location="${libDir}/jcodec-javase-0.2.3.jar"/>
         <pathelement location="${libDir}/nom-tam-fits-1.13.1m0.jar"/>
         <pathelement location="${libDir}/jafama-2.3.1.jar"/>
