Updates to the classpaths/build file due to RM 2292 crucible updates

--- a/build.xml
+++ b/build.xml
@@ -45,11 +45,9 @@
            destdir="${rootSAAVTKdir}/build/classes"
            debug="off" >
       <classpath>
-      	<pathelement location="${libDir}/crucible-core-20200730.jar"/>
-      	<pathelement location="${libDir}/crucible-mantle-spice-20200730.jar"/>
-      	<pathelement location="${libDir}/crucible-crust-metadata-20200730.jar"/>
-      	<pathelement location="${libDir}/crucible-crust-settings-20200730.jar"/>
-        <pathelement location="${libDir}/crucible-crust-spice-20200730.jar"/>
+      	<pathelement location="${libDir}/crucible-core-1.0.0-b23-b505c84b.jar"/>
+      	<pathelement location="${libDir}/crucible-mantle-1.0.0-b23-b505c84b.jar"/>
+      	<pathelement location="${libDir}/crucible-crust-1.0.0-b23-b505c84b.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
         <pathelement location="${libDir}/commons-math3-3.6.1.jar"/>
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
@@ -177,11 +175,9 @@
         <fileset dir="${rootdir}/lib">
           <include name="*.jar" />
         </fileset>
-        <pathelement location="${libDir}/crucible-core-20200730.jar"/>
-        <pathelement location="${libDir}/crucible-mantle-spice-20200730.jar"/>
-        <pathelement location="${libDir}/crucible-crust-metadata-20200730.jar"/>
-        <pathelement location="${libDir}/crucible-crust-settings-20200730.jar"/>
-        <pathelement location="${libDir}/crucible-crust-spice-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-core-1.0.0-b23-b505c84b.jar"/>
+        <pathelement location="${libDir}/crucible-crust-1.0.0-b23-b505c84b.jar"/>
+        <pathelement location="${libDir}/crucible-mantle-1.0.0-b23-b505c84b.jar"/>
         <pathelement location="${libDir}/commons-math3-3.6.1.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
@@ -237,11 +233,9 @@
       <manifest>
         <attribute name="Class-Path" value="netcdfAll-4.3.jar
         	commons-io-2.0.jar
-            crucible-core-20200730.jar
-            crucible-mantle-spice-20200730.jar
-            crucible-crust-metadata-20200730.jar
-            crucible-crust-settings-20200730.jar
-            crucible-crust-spice-20200730.jar
+            crucible-core-1.0.0-b23-b505c84b.jar
+            crucible-crust-1.0.0-b23-b505c84b.jar
+            crucible-mantle-1.0.0-b23-b505c84b.jar
         	commons-math3-3.6.1.jar
             commons-math3-3.2.jar
           	commons-text-1.8.jar
@@ -361,11 +355,9 @@
 
       <manifest>
         <attribute name="Class-Path" value="netcdfAll-4.3.jar
-            crucible-core-20200730.jar
-            crucible-mantle-spice-20200730.jar
-            crucible-crust-metadata-20200730.jar
-            crucible-crust-settings-20200730.jar
-            crucible-crust-spice-20200730.jar
+            crucible-core-1.0.0-b23-b505c84b.jar
+            crucible-crust-1.0.0-b23-b505c84b.jar
+            crucible-mantle-1.0.0-b23-b505c84b.jar
         	  commons-io-2.0.jar
             commons-math3-3.6.1.jar
             commons-math3-3.2.jar
@@ -472,11 +464,9 @@
     <mkdir dir="${rootSAAVTKdir}/build/jar"/>
     <jar destfile="${rootSAAVTKdir}/build/jar/saavtk.jar" basedir="${rootSAAVTKdir}/build/classes">
       <manifest>
-        <attribute name="Class-Path" value="crucible-core-20200730.jar
-        									crucible-mantle-spice-20200730.jar
-        									crucible-crust-metadata-20200730.jar
-        									crucible-crust-settings-20200730.jar
-        									crucible-crust-spice-20200730.jar
+        <attribute name="Class-Path" value="crucible-core-1.0.0-b23-b505c84b.jar
+        									crucible-crust-1.0.0-b23-b505c84b.jar
+        									crucible-mantle-1.0.0-b23-b505c84b.jar
         									commons-math3-3.6.1.jar
                                             commons-math3-3.2.jar
                                             commons-text-1.8.jar
@@ -613,11 +603,9 @@
   <target name="clean">
     <delete dir="${rootdir}/build"/>
     <delete dir="${rootSAAVTKdir}/build"/>
-  	<delete file="${rootlibDir}/crucible-core-20200730.jar"/>
-  	<delete file="${rootlibDir}/crucible-mantle-spice-20200730.jar"/>
-  	<delete file="${rootlibDir}/crucible-crust-settings-20200730.jar"/>
-   	<delete file="${rootlibDir}/crucible-crust-metadata-20200730.jar"/>
-    <delete file="${rootlibDir}/crucible-crust-spice-20200730.jar"/>
+  	<delete file="${rootlibDir}/crucible-core-1.0.0-b23-b505c84b.jar"/>
+  	<delete file="${rootlibDir}/crucible-crust-1.0.0-b23-b505c84b.jar"/>
+  	<delete file="${rootlibDir}/crucible-mantle-1.0.0-b23-b505c84b.jar"/>
     <delete file="${rootlibDir}/commons-io-2.0.jar"/>
     <delete file="${rootlibDir}/commons-math3-3.6.1.jar"/>
     <delete file="${rootlibDir}/commons-math3-3.2.jar"/>
@@ -665,11 +653,9 @@
       <jvmarg value="-Dcom.apple.mrj.application.apple.menu.about.name=SBMT Test"/>
       <classpath>
 <!--
-        <pathelement location="${libDir}/crucible-core-20200730.jar"/>
-        <pathelement location="${libDir}/crucible-mantle-spice-20200730.jar"/>
-        <pathelement location="${libDir}/crucible-crust-metadata-20200730.jar"/>
-        <pathelement location="${libDir}/crucible-crust-settings-20200730.jar"/>
-        <pathelement location="${libDir}/crucible-crust-spice-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-core-1.0.0-b23-b505c84b.jar"/>
+        <pathelement location="${libDir}/crucible-crust-1.0.0-b23-b505c84b.jar"/>
+        <pathelement location="${libDir}/crucible-mantle-1.0.0-b23-b505c84b.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
         <pathelement location="${libDir}/commons-text-1.8.jar"/>
@@ -698,11 +684,9 @@
         <pathelement location="${rootdir}/build/jar/near.jar"/>
         <pathelement location="${rootSAAVTKdir}/build/jar/saavtk.jar"/>
 -->
-        <pathelement location="${libDir}/crucible-core-20200730.jar"/>
-        <pathelement location="${libDir}/crucible-mantle-spice-20200730.jar"/>
-        <pathelement location="${libDir}/crucible-crust-metadata-20200730.jar"/>
-        <pathelement location="${libDir}/crucible-crust-settings-20200730.jar"/>
-        <pathelement location="${libDir}/crucible-crust-spice-20200730.jar"/>
+        <pathelement location="${libDir}/crucible-core-1.0.0-b23-b505c84b.jar"/>
+        <pathelement location="${libDir}/crucible-crust-1.0.0-b23-b505c84b.jar"/>
+        <pathelement location="${libDir}/crucible-mantle-1.0.0-b23-b505c84b.jar"/>
         <pathelement location="${libDir}/commons-io-2.0.jar"/>
         <pathelement location="${libDir}/commons-math3-3.6.1.jar"/>
         <pathelement location="${libDir}/commons-math3-3.2.jar"/>
