--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/saavtk"/>
 	<classpathentry kind="lib" path="/saavtk/lib/gson-2.8.0.jar" sourcepath="/saavtk/lib/gson-2.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jcommander-1.72.jar"/>
-	<classpathentry kind="lib" path="lib/netcdfAll-4.3.jar"/>
 	<classpathentry kind="lib" path="lib/drmaa.jar"/>
 	<classpathentry kind="lib" path="lib/altwg.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
@@ -17,14 +16,14 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/saavtk/lib/commons-text-1.8-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Home(1)">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="/saavtk/lib/jgoodies-looks-2.4.0.jar"/>
 	<classpathentry kind="lib" path="/saavtk/lib/commons-io-2.8.0.jar"/>
 	<classpathentry kind="lib" path="/saavtk/lib/jogl/jogl-all.jar"/>
 	<classpathentry kind="lib" path="lib/jide-oss-java11.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
