--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.1.10-bin.jar"/>
 	<classpathentry kind="lib" path="lib/spice-N0065.jar"/>
 	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.27.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/LGoodDatePicker-11.2.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/saavtk"/>
 	<classpathentry kind="lib" path="/saavtk/lib/gson-2.8.0.jar" sourcepath="/saavtk/lib/gson-2.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="lib/jcommander-1.72.jar"/>
@@ -21,7 +22,7 @@
 	<classpathentry kind="lib" path="/saavtk/lib/commons-io-2.8.0.jar"/>
 	<classpathentry kind="lib" path="/saavtk/lib/jogl/jogl-all.jar"/>
 	<classpathentry kind="lib" path="lib/jide-oss-java11.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"> 
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
