--- a/pipeline/rawdata/generic/createInfoFiles/Makefile
+++ b/pipeline/rawdata/generic/createInfoFiles/Makefile
@@ -2,6 +2,14 @@
 SPICE_DIR			= /project/sbmtpipeline/software/spice/cspice-20200519/cspice
 SPICE_LIB			= $(SPICE_DIR)/lib/cspice.a
 #
+# CFITSIO
+#CFITSIO				= cfitsio
+#CFITSIO_LIBS			= -L./cfitsio -lcfitsio
+#LIB_CFITSIO			= cfitsio/libcfitsio.a
+CFITSIO				=
+CFITSIO_LIBS			=
+LIB_CFITSIO			=
+#
 # Compiler
 CXX				= g++
 # Change -O2 to -O0 -g for debugging
@@ -9,28 +17,29 @@ COPT				= -O2
 CFLAGS				= -Wall --pedantic -Wno-long-long
 CINCLUDES			= -I$(SPICE_DIR)/include -I.
 CLIBS				= $(SPICE_LIB)
-CFITSIO_LIBS			= -L./cfitsio -lcfitsio
 #
 # Main tool (createInfoFiles).
 TOOL				= createInfoFiles
-SRC				= createInfoFiles.cpp getSpacecraftState.cpp getTargetState.cpp getFov.cpp
+SRC				= createInfoFiles.cpp getSpacecraftState.cpp getTargetState.cpp getFov.cpp saveInfoFile.cpp
+OBJ				= $(SRC:.cpp=.o)
 
 # SPICE pointing tool (sbmtSpicePointing).
-SPICE_TOOL		= sbmtSpicePointing
-SPICE_SRC		= sbmtSpicePointing.cpp getSpacecraftState.cpp getTargetState.cpp getFov.cpp
+SPICE_TOOL			= sbmtSpicePointing
+SPICE_SRC			= sbmtSpicePointing.cpp getSpacecraftState.cpp getTargetState.cpp getFov.cpp saveInfoFile.cpp
+SPICE_OBJ			= $(SPICE_SRC:.cpp=.o)
 
-$(TOOL): $(SRC)
-	$(CXX) -o $@ $(COPT) $(CFLAGS) $(CINCLUDES) $(SRC) $(CLIBS)
+$(TOOL): $(OBJ)
+	$(CXX) -o $@ $(COPT) $(CFLAGS) $(CINCLUDES) $(OBJ) $(CLIBS)
 
-$(SPICE_TOOL): cfitsio $(SPICE_SRC)
-	$(CXX) -o $@ $(COPT) $(CFLAGS) $(CINCLUDES) $(SPICE_SRC) $(CLIBS) $(CFITSIO_LIBS)
+$(SPICE_TOOL): $(CFITSIO) $(SPICE_OBJ)
+	$(CXX) -o $@ $(COPT) $(CFLAGS) $(CINCLUDES) $(SPICE_OBJ) $(CLIBS)
 
-all: cfitsio $(TOOL) $(SPICE_TOOL)
+all: $(CFITSIO) $(TOOL) $(SPICE_TOOL)
 
-cfitsio: cfitsio/libcfitsio.a
+cfitsio: $(LIB_CFITSIO)
 
 cfitsio/libcfitsio.a:
-	@echo "Configuring cfitsio prior to building... \c"
+	@echo "Configuring cfitsio prior to building..."
 	@(cd cfitsio; ./configure > configure.txt 2>&1; \
 	  if test $$? -ne 0; then \
 	    echo "Errors occurred; see file cfitsio/configure.txt for more info." >&2; \
@@ -38,7 +47,7 @@ cfitsio/libcfitsio.a:
 	  else \
 	    echo "done"; \
 	  fi)
-	@echo "Building cfitsio... \c"
+	@echo "Building cfitsio..."
 	@(cd cfitsio; make libcfitsio.a >& make.txt 2>&1 ; \
 	  if test $$? -ne 0; then \
 	    echo "Errors occurred; see file cfitsio/make.txt for more info." >&2; \
@@ -48,12 +57,18 @@ cfitsio/libcfitsio.a:
 	  fi)
 
 clean:
-	rm -f $(TOOL) $(SPICE_TOOL)
-	(cd cfitsio; make clean > /dev/null 2>&1)
+	rm -f *.o
+	@(if test -f cfitsio/Makefile; then cd cfitsio; make clean > /dev/null 2>&1; fi)
 
 distclean:
+	rm -f *.o
 	rm -f $(TOOL) $(SPICE_TOOL)
 	rm -rf *.dSYM/
-	(cd cfitsio; make distclean > /dev/null 2>&1)
+	@(if test -f cfitsio/Makefile; then cd cfitsio; make distclean > /dev/null 2>&1; fi)
 
 .SUFFIXES:
+
+.SUFFIXES: .cpp .o
+
+.cpp.o:
+	$(CXX) -c -o $@ $(COPT) $(CFLAGS) $(CINCLUDES) $<
